# modelmimic

./: .gitignore  .pre-commit-config.yaml  README.md  all-documents.html  apidocs-help.html  classIndex.html  fullsearchindex.json  index.html  modelmimic.html  modelmimic.mimic.MimicModelRun.html  modelmimic.mimic.html  modelmimic.utils.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  searchindex.json  undoccedSummary.html
.github/workflows/: pre-commit.yml  python-package.yml
evvdatagen/: datagen.py
modelmimic/: __init__.py  mimic.py  utils.py
modelmimic/config/: MVK.toml  MVKO.toml  MVKxx.toml
tests/: test_numerics.py  test_utils.py
